# AnyCapture

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  Readme.md
src/: audio_capture_worker.cpp  audio_capture_worker.h  audiocapture.cpp  audiocapture.h  copyright.rc  dxgiscreencapturer.cpp  dxgiscreencapturer.h  ffmpeg_muxer.cpp  ffmpeg_muxer.h  ffmpeg_recorder.cpp  ffmpeg_recorder.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  recorder.cpp  recorder.h  res.qrc  screen_recorder.cpp  screen_recorder.h  select_model.h  videocapture.cpp  videocapture.h  window_enumerator.cpp  window_enumerator.h  windowcapture.cpp  windowcapture.h
src/components/: app_select.cpp  app_select.h  file_selector.cpp  file_selector.h  region_selector.cpp  region_selector.h  region_selector.ui  window_resizer.cpp  window_resizer.h
